DEV 2.2.4 - Upgraded to 1.19.4 - Can Modify 1.20 smithing table